--- a/assets/scss/_menu.scss
+++ b/assets/scss/_menu.scss
@@ -1,28 +1,25 @@
-.menu {
-  position: absolute;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-
-.menu.main {
-  top: 0;
+@media screen and (max-width: 991px) {
+  .menu-container {
+    position: inherit !important;
+    width: 100% !important;
+    height: inherit !important;
+  }
 }
 
 .menu-container {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-
-.sticky {
-  position: sticky;
-  top: 0;
+  position: fixed;
+  width: 50%;
   height: 100vh;
 }
 
-.menu.footer {
-  bottom: 0;
+.menu {
+  position: sticky;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  top: 0;
+  font-size: 20px;
+  font-weight: 500;
 }
 
 .menu-item {
